# web_hw11FastApi

./: .env.example  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 3f63016c1287_add_is_active_to_user_table.py  80893c4f21f2_add_users_model.py  be3614e90370_init.py  d0a757351d70_add_avatar_field_to_user_table.py
config/: general.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html  main.html
docs/_build/html/_modules/src/auth/: mail_utils.html  pass_utils.html  repos.html  routes.html  utils.html
docs/_build/html/_modules/src/contacts/: repos.html  routes.html
docs/_build/html/_modules/src/users/: routes.html
docs/_build/html/_sources/: index.rst.txt
src/auth/: mail_utils.py  models.py  pass_utils.py  repos.py  routes.py  schema.py  utils.py
src/contacts/: models.py  repos.py  routes.py  schema.py
src/templates/: verification_email.html
src/users/: routes.py
tests/: conftest.py  test_auth.py  test_unit_repo_contacts.py
