[tool.poetry]
name = "web-hw11fastapi"
version = "0.1.0"
description = ""
authors = ["marinasemak <marina.semak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}
uvicorn = "^0.32.0"
black = "^24.10.0"
pydantic-settings = "^2.6.1"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
syncpg = "^1.1.3"
greenlet = "^3.1.1"
isort = "^5.13.2"
autoflake = "^2.3.1"
passlib = "^1.7.4"
bcrypt = "^4.2.1"
jwt = "^1.3.1"
python-jose = "^3.3.0"
fastapi-mail = "^1.4.2"
libgravatar = "^1.0.4"
cloudinary = "^1.41.0"
slowapi = "^0.1.9"
fastapi-limiter = "^0.1.6"
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
pytest-faker = "^2.0.0"
sphinx-autodoc-typehints = "^2.5.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

